

                              Kiji Schema Release Notes

Version 1.0.0
  * SCHEMA-189. Adds KijiBufferedWriter.
  * SCHEMA-106. Move CellSpec to org.kiji.schema.layout and mark as Framework.

Version 1.0.0-rc5
  * SCHEMA-240. Composite key format support in all CLI tools.
  * SCHEMA-134. Hides KijiDataRequestValidator's constructor and
      changes validate()'s signature. Framework developers should
      use the factory method validatorForLayout() to get a validator
      which can validate KijiDataRequests against a table layout.
  * SCHEMA-261. Bugfix: Restrict KijiRowData.getValues(family) and
      getMostRecentValues() to only work on map-type column families.
  * SCHEMA-238. Adds a warning for new tables created with a layout
      that uses RowKeyFormat. New tables should be made with RowKeyFormat2.
  * SCHEMA-239. KijiTable.close() is deprecated, use KijiTable.release().
  * SCHEMA-262. KijiPager and KijiRowScanner throw unchecked KijiIOException.
  * SCHEMA-173. Improves CLI parsing of EntityIds.  Adds abstract
      toShellString() to EntityId which returns a string which can be
      copied into CLI.
  * SCHEMA-207. KijiURIBuilder supports relative paths to
      DEFAULT_HBASE_URI.
  * SCHEMA-247. The ls tool can no longer perform get and scan.
  * SCHEMA-241. Change audience annotations of KijiDeleter,
      KijiIncrementer, and KijiPutter to @ApiAudience.Public.
  * SCHEMA-139. KijiTableKeyValueDatabase methods return the true
      instance type, not the interface type.
  * SCHEMA-248. Kiji.modifyTableLayout() no longer takes a table name.
      The Kiji.modifyTableLayout() methods that take a String name are
      now deprecated.
  * SCHEMA-223. Adds backup methods to KijiSystemTable and SystemTable
      backup to MetadataTool.
  * SCHEMA-244. Kiji.createTable() now takes a TableLayoutDesc object.
      The Kiji.createTable() methods that take a KijiTableLayout object
      are deprecated.